--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,5 @@
     <string name="share_all_menu">Share visible menus</string>
     <string name="select">Select</string>
     <string name="no_menu_avaiable">No menus avaiable. Use the \'share\' function to add a menu to this poll</string>
+    <string name="votes">Votes: %d</string>
 </resources>
